# Poole

./: .gitignore  AUTHORS  CHANGELOG  CMakeLists.txt  Poole_profile_info.txt  README.md  init_documentation.sh  run_all.sh  run_application.sh  run_profile.sh  run_tests.sh
_install/include/: ThreadInfo.h  test_functions.h
_install/lib/cmake/Poole/: PooleConfigVersion.cmake  PooleTargets-debug.cmake  PooleTargets-release.cmake  PooleTargets.cmake
cmake/: PooleConfig.cmake.in
include/Poole/: Poole.cpp  Poole.h
includes/: Poole.h  ThreadInfo.h  test_functions.h
src/: CMakeLists.txt  Poole.cpp  ThreadInfo.cpp  main.cpp  test_functions.cpp
tests/: CMakeLists.txt  tests_functions.cpp  tests_poole.cpp
